--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<a href="index.html" id="main-logo">ComproDono</a>
 							<div class="animate-box">
 								<h2>Si estás comprando, estas donando</h2>
-								<p><a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name"></a></p>
+								<p>*En desarrollo*<a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name"></a></p>
 								<p><a class="btn btn-primary btn-lg" href="#">¡MUY PRONTO!</a></p>
 							</div>
 						</div>
