--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ComproDono - Si estas comprando, estás donando</title>
+	<title>ComproDono - Si estás comprando, estás donando</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -77,7 +77,7 @@
 						<div class="col-md-10 col-md-offset-1">
 							<a href="index.html" id="main-logo">ComproDono</a>
 							<div class="animate-box">
-								<h2>Si estás comprando, estas donando</h2>
+								<h2>Si estás comprando, estás donando</h2>
 								<p>*En desarrollo*<a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name"></a></p>
 								<p><a class="btn btn-primary btn-lg" href="#">¡MUY PRONTO!</a></p>
 							</div>
